[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scenes/Screens/MainMenu.gd" type="Script" id=1]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -20.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 498.0
margin_right = 984.0
margin_bottom = 560.0
size_flags_horizontal = 3
custom_constants/separation = 100
alignment = 1

[node name="FindGame" type="Button" parent="VBoxContainer"]
margin_top = 130.0
margin_right = 486.0
margin_bottom = 230.0
rect_min_size = Vector2( 0, 100 )
text = "Find Game"

[node name="HostGame" type="Button" parent="VBoxContainer"]
margin_top = 330.0
margin_right = 486.0
margin_bottom = 430.0
rect_min_size = Vector2( 0, 100 )
text = "Host Game"

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_right = 459.0
margin_bottom = 557.0

[node name="Options" type="VBoxContainer" parent="CenterContainer"]
margin_left = 129.0
margin_top = 176.0
margin_right = 329.0
margin_bottom = 380.0

[node name="PlayerName" type="LineEdit" parent="CenterContainer/Options"]
margin_right = 200.0
margin_bottom = 100.0
rect_min_size = Vector2( 200, 100 )
text = "EpicDude54"

[node name="Character" type="OptionButton" parent="CenterContainer/Options"]
margin_top = 104.0
margin_right = 200.0
margin_bottom = 204.0
rect_min_size = Vector2( 0, 100 )
text = "Item 0"
items = [ "Shmelly", null, false, 0, null, "Clot", null, false, 1, null ]
selected = 0
[connection signal="pressed" from="VBoxContainer/FindGame" to="." method="_on_Find_Game_pressed"]
[connection signal="pressed" from="VBoxContainer/HostGame" to="." method="_on_Host_Game_pressed"]
[connection signal="text_changed" from="CenterContainer/Options/PlayerName" to="." method="_on_PlayerName_text_changed"]
[connection signal="item_selected" from="CenterContainer/Options/Character" to="." method="_on_Character_item_selected"]
